--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "randomstring": "^1.3.0",
     "sequelize": "^6.34.0"
   }
 }
