--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mariadb": "^3.2.2",
     "moment": "^2.29.4",
     "mysql2": "^3.6.3",
     "node-cron": "^3.0.3",
